# qa-testing-page

./: Makefile  README.md  pyproject.toml  start-project.bat
app/: repository.py  routes.py
app/templates/: base.html  create_company.html  create_property.html  list_companies.html  list_properties.html
tests/: cypress.config.js  package-lock.json  test-cases.md
tests/cypress/e2e/TS_navigation/: TS_navigation.cy.js
tests/cypress/e2e/Test_Companies/: TS_CreateCompanies.js  TS_DeleteCompanies.js  unitTest.js
tests/cypress/e2e/Test_Properties/: TS_CreateProperties.js  TS_DeleteProperties.js
tests/cypress/e2e/Test_companies/: TS_companies-page.cy.js  TS_create-company.cy.js  TS_delete-company.cy.js  unit-test.cy.js
tests/cypress/e2e/Test_properties/: TS_create-property.cy.js  TS_delete-property.cy.js  TS_properties-page.cy.js
tests/cypress/fixtures/: companiesData.json  propertiesData.json
tests/cypress/support/: utils.js
tests/cypress/support/pageObjects/: CompaniesPage.js  CreateCompanyPage.js  CreatePropertyPage.js  Properties_Page.js
