[project]
name = "qa-testing-page"
version = "0.1.0"
description = "QA Automation Test App for Leasey.AI"
authors = [
    {name = "Leasey.AI"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
